.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Scrooge's user's guide.

Unreleased
----------

17.10.0
-------

- From now on, release versions will be based on release date in the format of
  YY.MM.x where x is a patch number. ``PHAB_ID=D101244``

- scrooge-generator: For generated scala $FinagleService, moved per-endpoint statsFilter to the
  outermost of filter chain so it can capture all exceptions, added per-endpoint response
  classification in statsFilter. ``PHAB_ID=D100649``

- scrooge-generator: Generated scala $FinagleClient takes a `RichClientParam` for all
  configuration params, such as `TProtocolFactory`, `ResponseClassifier`, `maxReusableBufferSize`,
  and `StatsReceiver`, $FinagleService takes a `RichServerParam`. ``PHAB_ID=D83190``

- scrooge-sbt-plugin: Renamed ScroogeSBT.thriftConfig to ScroogeSBT.ThriftConfig for
  sbt 1.0.0.  ``PHAB_ID=D101910``

4.20.0
------

No Changes

4.19.0
------
- scrooge-generator: Generated scala/java code now is using `serviceMap` instead of `functionMap`
  for Finagle services' method implementation. ``PHAB_ID=D73619`` for scala and
  ``PHAB_ID=D76129`` for java

- scrooge-generator: Generated Java code now is using `c.t.s.TReusableBuffer` to reduce
  object allocations. This in turn adds `scrooge-core` as dependency for generated
  java code. ``PHAB_ID=D60406``

- scrooge-generator: support for thrift struct field doccomments for scala
  generated code ``RB_ID=918179``

- scrooge-generator: The `MethodIface` in generated Scala code implements
  `FutureIface`. It already "was" that type in practice but did not implement
  that trait. ``PHAB_ID=D67289``

- scrooge-generator: Generated Cocoa code now supports modular frameworks and
  removes some compiler warnings about implicit casts. ``PHAB_ID=D74200``

4.18.0
------