@@ -17,8 +17,6 @@ import java.util.Collections;
 import java.util.BitSet;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import org.apache.thrift.*;
 import org.apache.thrift.async.*;
@@ -329,7 +327,6 @@ public class TestService {
   }
 
   public static class Processor extends TestServiceParent.Processor implements TProcessor {
-    private static final Logger LOGGER = LoggerFactory.getLogger(Processor.class.getName());
     public Processor(Iface iface)
     {
       super(iface);
@@ -381,7 +378,6 @@ public class TestService {
         } catch (TestException ex) {
           result.ex = ex;
         } catch (Throwable th) {
-          LOGGER.error("Internal error processing test_endpoint", th);
           TApplicationException x = new TApplicationException(TApplicationException.INTERNAL_ERROR, "Internal error processing test_endpoint");
           oprot.writeMessageBegin(new TMessage("test_endpoint", TMessageType.EXCEPTION, seqid));
           x.write(oprot);
